Project

General

Profile

Actions

Bug #52089

closed

Deferred writes are unexpectedly applied to large writes on spinners

Added by Igor Fedotov almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Appending 4MB to an object causes deferred write for every 64K blob.


Related issues 2 (0 open2 closed)

Has duplicate RADOS - Bug #52523: Latency spikes causing timeouts after upgrade to pacific (16.2.5)Duplicate

Actions
Copied to bluestore - Backport #52244: pacific: Deferred writes are unexpectedly applied to large writes on spinnersResolvedNeha OjhaActions
Actions #1

Updated by Igor Fedotov almost 3 years ago

  • Status changed from New to In Progress
  • Pull request ID set to 42725
Actions #2

Updated by Igor Fedotov almost 3 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Neha Ojha almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #52244: pacific: Deferred writes are unexpectedly applied to large writes on spinners added
Actions #5

Updated by Igor Fedotov over 2 years ago

  • Status changed from Pending Backport to Resolved
Actions #6

Updated by Igor Fedotov over 2 years ago

  • Has duplicate Bug #52523: Latency spikes causing timeouts after upgrade to pacific (16.2.5) added
Actions

Also available in: Atom PDF